feat: 유저 쿠폰 삭제 책임을 도메인으로 변경