@@ -1,17 +1,18 @@
 package cart.application;
 
 import cart.dao.CartItemDao;
-import cart.dao.MemberCouponDao;
 import cart.domain.cartItem.CartItem;
 import cart.domain.coupon.Coupon;
 import cart.domain.coupon.Discount;
 import cart.domain.member.Member;
 import cart.domain.member.MemberCoupon;
+import cart.domain.member.MemberCoupons;
 import cart.domain.product.Product;
 import cart.dto.order.OrderProductRequest;
 import cart.dto.order.OrderRequest;
 import cart.exception.MemberCouponNotFoundException;
 import cart.exception.OrderCartMismatchException;
+import cart.repository.MemberCouponRepository;
 import cart.repository.OrderRepository;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
@@ -20,6 +21,7 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
@@ -32,11 +34,11 @@ import static org.mockito.Mockito.verify;
 class OrderServiceTest {
 
     @Mock
-    private MemberCouponDao memberCouponDao;
-    @Mock
     private CartItemDao cartItemDao;
     @Mock
     private OrderRepository orderRepository;
+    @Mock
+    private MemberCouponRepository memberCouponRepository;
     @InjectMocks
     private OrderService orderService;
 
@@ -58,12 +60,15 @@ class OrderServiceTest {
         OrderRequest request = new OrderRequest(
                 new OrderProductRequest(1L, "치킨", 10000, "https://chicken"),
                 10,
-                List.of(1L)
+                Collections.emptyList()
         );
 
-        given(memberCouponDao.findByIds(anyList())).willReturn(List.of(new MemberCoupon(2L, new Coupon(2L, "쿠폰", new Discount("rate", 10)))));
 
-        assertThatThrownBy(() -> orderService.createOrder(List.of(request), new Member(1L, "a@a.com", "1234").setCoupons(List.of(new MemberCoupon(1L, new Coupon(2L, "쿠폰", new Discount("rate", 10)))))))
+        given(memberCouponRepository.findByIds(anyList())).willReturn(new MemberCoupons(new ArrayList<>(List.of(new MemberCoupon(1L, new Coupon(2L, "쿠폰", new Discount("rate", 10)))))));
+        given(memberCouponRepository.findByMemberId(anyLong())).willReturn(new MemberCoupons(new ArrayList<>(List.of(new MemberCoupon(2L, new Coupon(2L, "쿠폰", new Discount("rate", 10)))))));
+        given(cartItemDao.findByMemberId(anyLong())).willReturn(List.of(new CartItem(1L, 10, new Product(1L, "치킨", 10000, "https://chicken"), new Member(1L, "a@a.com", "1234"))));
+
+        assertThatThrownBy(() -> orderService.createOrder(List.of(request), new Member(1L, "a@a.com", "1234")))
                 .isInstanceOf(MemberCouponNotFoundException.class);
     }
 
@@ -76,19 +81,18 @@ class OrderServiceTest {
                 List.of(1L)
         );
 
-        given(cartItemDao.findByMemberId(eq(1L))).willReturn(List.of(new CartItem(1L, 10, new Product(1L, "치킨", 10000, "https://chicken"), new Member(1L, "a@a.com", "1234"))));
-        given(memberCouponDao.findByIds(eq(List.of(1L)))).willReturn(List.of(new MemberCoupon(1L, new Coupon(22L, "쿠폰", new Discount("rate", 10)))));
+        given(memberCouponRepository.findByIds(anyList())).willReturn(new MemberCoupons(new ArrayList<>(List.of(new MemberCoupon(1L, new Coupon(2L, "쿠폰", new Discount("rate", 10)))))));
+        given(memberCouponRepository.findByMemberId(anyLong())).willReturn(new MemberCoupons(new ArrayList<>(List.of(new MemberCoupon(1L, new Coupon(2L, "쿠폰", new Discount("rate", 10)))))));
+        given(cartItemDao.findByMemberId(anyLong())).willReturn(List.of(new CartItem(1L, 10, new Product(1L, "치킨", 10000, "https://chicken"), new Member(1L, "a@a.com", "1234"))));
 
         // when
-        orderService.createOrder(List.of(request), new Member(1L, "a@a.com", "1234").setCoupons(List.of(new MemberCoupon(1L, new Coupon(22L, "쿠폰", new Discount("rate", 10))))));
+        orderService.createOrder(List.of(request), new Member(1L, "a@a.com", "1234"));
 
         // then
         Assertions.assertAll(
-                () -> verify(memberCouponDao).delete(eq(List.of(1L))),
-                () -> verify(cartItemDao).delete(eq(1L), eq(List.of(1L))),
-                () -> verify(orderRepository).create(anyList(), eq(1L))
+                () -> verify(memberCouponRepository).updateCoupons(any(MemberCoupons.class), any(Member.class)),
+                () -> verify(cartItemDao).delete(anyLong(), anyList()),
+                () -> verify(orderRepository).create(anyList(), anyLong())
         );
-
     }
-
 }
